--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/tailwind": "^5.0.0",
     "astro": "^3.0.7",
+    "dotenv": "^16.4.5",
     "tailwindcss": "^3.3.3"
   }
 }
